--- a/src/main/java/TareaGui.form
+++ b/src/main/java/TareaGui.form
@@ -19,7 +19,7 @@
           <title-color color="-16777216"/>
         </border>
         <children>
-          <component id="a814e" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="a814e" class="javax.swing.JTextField" binding="idField">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -167,10 +167,7 @@
               <model>
                 <item value="Masculino"/>
                 <item value="Femenino"/>
-                <item value="No Binario"/>
-                <item value="Alien"/>
-                <item value="Helicoptero Apache c345 con doble helice"/>
-                <item value="Prefiero no contestar"/>
+                <item value="Otro"/>
               </model>
             </properties>
           </component>
